--- a/config/orderly-web.yml
+++ b/config/orderly-web.yml
@@ -81,7 +81,7 @@ web:
   ## ports).  Here, we're going to use the same as for the proxy but
   ## if you are using an external proxy then you'd use its hostname
   ## and port.
-  url: https://localhost
+  url: https://localhost:80443
   ## If dev_mode is true then the port is exposed to the host (as
   ## plain http).  Do not use in production.  The port is attached
   ## only to the localhost and will not be available from other
@@ -128,8 +128,8 @@ proxy:
     certificate: VAULT:secret/proxy/ssl_certificate:value
     key: VAULT:secret/proxy/ssl_private_key:value
   hostname: localhost
-  port_http: 80
-  port_https: 443
+  port_http: 8080
+  port_https: 80443
   image:
     repo: vimc
     name: orderly-web-proxy
