--- a/config/orderly-web.yml
+++ b/config/orderly-web.yml
@@ -81,7 +81,7 @@ web:
   ## ports).  Here, we're going to use the same as for the proxy but
   ## if you are using an external proxy then you'd use its hostname
   ## and port.
-  url: https://localhost:10443
+  url: https://ebola2018.dide.ic.ac.uk:10443
   ## If dev_mode is true then the port is exposed to the host (as
   ## plain http).  Do not use in production.  The port is attached
   ## only to the localhost and will not be available from other
@@ -127,7 +127,7 @@ proxy:
     ##    string to extract them from the vault.
     certificate: VAULT:secret/proxy/ssl_certificate:value
     key: VAULT:secret/proxy/ssl_private_key:value
-  hostname: localhost
+  hostname: ebola2018.dide.ic.ac.uk
   port_http: 1080
   port_https: 10443
   image:
