Use release tag

--- a/config/orderly-web.yml
+++ b/config/orderly-web.yml
@@ -77,7 +77,7 @@ web:
   image:
     repo: vimc
     name: orderly-web
-    tag: master
+    tag: release
     migrate: orderlyweb-migrate
     admin: orderly-web-user-cli
     css-generator: orderly-web-css-generator
